test: cover secondary index release compatibility